redundant test deleted. Stream change and NoArgsConstructor added to AtmService