@@ -2,10 +2,12 @@ package com.contest.atmservice.service;
 
 import com.contest.atmservice.dto.AtmRequest;
 import com.contest.atmservice.dto.AtmResponse;
+import lombok.NoArgsConstructor;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Comparator;
+import java.util.List;
 
+@NoArgsConstructor
 public class AtmService {
     public static List<AtmResponse> sortRequests(List<AtmRequest> atmRequests) {
         return atmRequests
@@ -13,7 +15,7 @@ public class AtmService {
                 .sorted(getComparator())
                 .map(r ->new AtmResponse(r.region(), r.atmId()))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Comparator<AtmRequest> getComparator() {
